got the webscraper working still need to clean up some imports

--- a/client/templates/info.html
+++ b/client/templates/info.html
@@ -2,5 +2,7 @@
   <p>Datalyst is an analytical tool that consumes and analyzes data from the
   Olympic games to provide models of potential winners in real time.</p>
 
-  {{ testData }}
+
+  <p>Check out this cool sample web scrape from wikipedia:</p>
+  {{ scrapeTest }}
 </template>
