made this project use mantra and react, moosh better

--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,7 @@
-/* CSS declarations go here */
-p#title {
-  margin: 100px 0 0 0;
-  font-size: 32px;
-  font-family: monospace;
+html {
+    background: url('/images/bg.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
